--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>ENKI - Robótica Avançada</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link
             rel="preconnect"
@@ -412,4 +412,5 @@ alt="Imagem do funcionamento do espeto do robô">
 
 <script type="module" src="/main.js"></script>
 </body>
+
 </html>
