--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>
             <img
                 class="logo_enki"
-                src="/enki_logo_png.png"
+                src="enki_logo_png.png"
                 alt="">
             <nav>
                 <ul>
@@ -414,3 +414,4 @@ alt="Imagem do funcionamento do espeto do robô">
 </body>
 
 </html>
+
